Fix Java 9 deprecation warnings