@@ -125,7 +125,7 @@ class SSLEngine
 
             try
             {
-                _verifier = (CertificateVerifier)cls.newInstance();
+                _verifier = (CertificateVerifier)cls.getDeclaredConstructor().newInstance();
             }
             catch(Throwable ex)
             {
@@ -160,7 +160,7 @@ class SSLEngine
 
             try
             {
-                _passwordCallback = (PasswordCallback)cls.newInstance();
+                _passwordCallback = (PasswordCallback)cls.getDeclaredConstructor().newInstance();
             }
             catch(Throwable ex)
             {
