@@ -731,8 +731,8 @@ public class TwowaysLambdaAMI
         public void response(java.util.Map<Long, Float> ro, java.util.Map<Long, Float> _do)
         {
             java.util.Map<Long, Float> di1 = new java.util.HashMap<Long, Float>();
-            di1.put(999999110L, new Float(-1.1f));
-            di1.put(999999111L, new Float(123123.2f));
+            di1.put(999999110L, Float.valueOf((float)-1.1f));
+            di1.put(999999111L, Float.valueOf((float)123123.2f));
             test(_do.equals(di1));
             test(ro.size() == 4);
             test(ro.get(999999110L).floatValue() == -1.1f);
@@ -1291,12 +1291,12 @@ public class TwowaysLambdaAMI
 
         {
             java.util.Map<Long, Float> di1 = new java.util.HashMap<Long, Float>();
-            di1.put(999999110L, new Float(-1.1f));
-            di1.put(999999111L, new Float(123123.2f));
+            di1.put(999999110L, Float.valueOf((float)-1.1f));
+            di1.put(999999111L, Float.valueOf((float)123123.2f));
             java.util.Map<Long, Float> di2 = new java.util.HashMap<Long, Float>();
-            di2.put(999999110L, new Float(-1.1f));
-            di2.put(999999120L, new Float(-100.4f));
-            di2.put(999999130L, new Float(0.5f));
+            di2.put(999999110L, Float.valueOf((float)-1.1f));
+            di2.put(999999120L, Float.valueOf((float)-100.4f));
+            di2.put(999999130L, Float.valueOf((float)0.5f));
 
             opLongFloatDI cb = new opLongFloatDI();
             p.begin_opLongFloatD(di1, di2,
