@@ -473,7 +473,7 @@ public final class PluginManagerI implements PluginManager
                 throw new PluginInitializationException("class " + className + " not found");
             }
 
-            java.lang.Object obj = c.newInstance();
+            java.lang.Object obj = c.getDeclaredConstructor().newInstance();
             try
             {
                 pluginFactory = (PluginFactory)obj;
@@ -483,6 +483,14 @@ public final class PluginManagerI implements PluginManager
                 throw new PluginInitializationException("class " + className + " does not implement PluginFactory",
                                                         ex);
             }
+        }
+        catch(NoSuchMethodException ex)
+        {
+            throw new PluginInitializationException("unable to instantiate class " + className, ex);
+        }
+        catch(java.lang.reflect.InvocationTargetException ex)
+        {
+            throw new PluginInitializationException("unable to instantiate class " + className, ex);
         }
         catch(IllegalAccessException ex)
         {
