@@ -29,7 +29,7 @@ public class MetricsMap<T extends com.zeroc.IceMX.Metrics>
                     _failures = new java.util.HashMap<>();
                 }
                 Integer count = _failures.get(exceptionName);
-                _failures.put(exceptionName, new Integer(count == null ? 1 : count + 1));
+                _failures.put(exceptionName, Integer.valueOf(count == null ? 1 : count + 1));
             }
         }
 
@@ -427,7 +427,7 @@ public class MetricsMap<T extends com.zeroc.IceMX.Metrics>
             {
                 try
                 {
-                    T t = _class.newInstance();
+                    T t = _class.getDeclaredConstructor().newInstance();
                     t.id = key;
                     e = new Entry(t);
                     _objects.put(key, e);
