@@ -108,7 +108,7 @@ public class Observer<T extends Metrics> extends com.zeroc.IceUtilInternal.StopW
 
         try
         {
-            ObserverImpl obsv = ocl.newInstance();
+            ObserverImpl obsv = ocl.getDeclaredConstructor().newInstance();
             obsv.init(helper, metricsObjects, null);
             return obsv;
         }
